tests/errors/codec_ignore_conflicts_with_field.dang
# A field cannot be both excluded and renamed for the same format.

type IgnoreConflict {
  field: String! @JSON.ignore @JSON.field(name: "renamed")
}

print("Should not reach here!")
